修正错误的拼写

--- a/DotnetconfChina/Views/Home/Index.cshtml
+++ b/DotnetconfChina/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 @using DotnetconfChina.Views.Shared.Components.Publsher
 
 @{
-    ViewData["Title"] = "2019 .NTE Conf 中国 开发者峰会官方网站";
+    ViewData["Title"] = "2019 .NET Conf 中国 开发者峰会官方网站";
 }
 
 
