--- a/DotnetconfChina/Views/Shared/Components/Footer/Default.cshtml
+++ b/DotnetconfChina/Views/Shared/Components/Footer/Default.cshtml
@@ -25,7 +25,7 @@
     </ul>
     <!-- End List -->
     <!-- Copyright -->
-    <p class="small text-muted mb-0">© .NTE Conf. @DateTime.Now.Year.ToString() Powered by  <a href="52ABP.com">52ABP</a> & Front </p>
+    <p class="small text-muted mb-0">© .NET Conf. @DateTime.Now.Year.ToString() Powered by  <a href="52ABP.com">52ABP</a> & Front </p>
     <!-- End Copyright -->
 </footer>
 <!-- ========== END FOOTER ========== -->
