给网站添加 favicon

--- a/DotnetconfChina/Views/Shared/_Layout.cshtml
+++ b/DotnetconfChina/Views/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] -  中国 .NET 开发者峰会 China .NET Conf 2019  </title>
 
+    <link rel="shortcut icon" href="~/assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="~/assets/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="~/assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="~/assets/img/favicon/favicon-96x96.png">
+    
     <!-- CSS Implementing Plugins -->
     <link rel="stylesheet" href="~/assets/vendor/font-awesome/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="~/assets/vendor/animate.css/animate.min.css">
